feat(setup): add stylelint and post css

--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -9,4 +9,4 @@
  * The script is automatically triggered by the pre-flight script
  * --------------------------------------------------------------------
  */
-@import './colors.css';
+@import url('./colors.css');
