feat(button): add colorization and padding

--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -9,4 +9,6 @@
  * The script is automatically triggered by the pre-flight script
  * --------------------------------------------------------------------
  */
+@import url('./mixins/breakpoints.css');
 @import url('./colors.css');
+@import url('./fontSizes.css');
