feat(select): add non styled select

--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -12,3 +12,4 @@
 @import url('./mixins/breakpoints.css');
 @import url('./colors.css');
 @import url('./fontSizes.css');
+@import url('./inputs.css');
