--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -10,6 +10,8 @@
  * --------------------------------------------------------------------
  */
 @import url('./mixins/breakpoints.css');
+@import url('./mixins/lineClamp.css');
+@import url('./mixins/scrollbar.css');
 @import url('./colors.css');
 @import url('./fontSizes.css');
 @import url('./inputs.css');
