--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -12,6 +12,7 @@
 @import url('./mixins/breakpoints.css');
 @import url('./mixins/lineClamp.css');
 @import url('./mixins/scrollbar.css');
+@import url('./mixins/theming.css');
 @import url('./colors.css');
 @import url('./fontSizes.css');
 @import url('./inputs.css');
