--- a/src/assets/styles/mixins/theming.css
+++ b/src/assets/styles/mixins/theming.css
@@ -7,3 +7,15 @@
 		@content;
 	}
 }
+
+@define-mixin prefersDark() {
+	@media (prefers-color-scheme: dark) {
+		@content;
+	}
+}
+
+@define-mixin prefersLight() {
+	@media (prefers-color-scheme: light) {
+		@content;
+	}
+}
