--- a/src/components/01-atoms/Radio/NeoRadio-themed.css
+++ b/src/components/01-atoms/Radio/NeoRadio-themed.css
@@ -2,4 +2,5 @@
 	--NeoRadio-color-accent: var(--neo-theme-color);
 	--NeoRadio-color-focus: var(--neo-theme-color);
 	--NeoRadio-color-label: var(--neo-theme-color);
+	--NeoRadio-color-required: var(--neo-color-red500);
 }
