--- a/src/components/01-atoms/TextArea/NeoTextArea-layout.css
+++ b/src/components/01-atoms/TextArea/NeoTextArea-layout.css
@@ -11,21 +11,21 @@
 .NeoTextArea--small {
 	--NeoTextArea-sizing-padding: var(--neo-sizing-inputPaddingSM);
 	--NeoTextArea-sizing-minHeight: 80px;
-	--NeoTextArea-sizing-fontSize: var(--neo-fontSize-xs);
-	--NeoTextArea-sizing-labelFontSize: var(--neo-fontSize-xs);
+	--NeoTextArea-sizing-fontSize: var(--neo-fontSize-textSm);
+	--NeoTextArea-sizing-labelFontSize: var(--neo-fontSize-textSm);
 }
 
 .NeoTextArea--medium {
 	--NeoTextArea-sizing-padding: var(--neo-sizing-inputPaddingMD);
 	--NeoTextArea-sizing-minHeight: 100px;
 	--NeoTextArea-sizing-fontSize: var(--neo-fontSize-base);
-	--NeoTextArea-sizing-labelFontSize: var(--neo-fontSize-sm);
+	--NeoTextArea-sizing-labelFontSize: var(--neo-fontSize-textSm);
 }
 
 .NeoTextArea--large {
 	--NeoTextArea-sizing-padding: var(--neo-sizing-inputPaddingLG);
 	--NeoTextArea-sizing-minHeight: 120px;
-	--NeoTextArea-sizing-fontSize: var(--neo-fontSize-base);
+	--NeoTextArea-sizing-fontSize: var(--neo-fontSize-textLg);
 	--NeoTextArea-sizing-labelFontSize: var(--neo-fontSize-base);
 }
 
