--- a/src/components/01-atoms/Checkbox/NeoCheckbox-themed.css
+++ b/src/components/01-atoms/Checkbox/NeoCheckbox-themed.css
@@ -2,4 +2,5 @@
 	--NeoCheckbox-color-accent: var(--neo-theme-color);
 	--NeoCheckbox-color-focus: var(--neo-theme-color);
 	--NeoCheckbox-color-label: var(--neo-theme-color);
+	--NeoCheckbox-color-required: var(--neo-color-red500);
 }
