Revert "setup(infrastucture): color strategy update (#4)"
This reverts commit d2f5551e9cd81b66401b1ce80bdfe1ad0b76b7fe.

--- a/src/components/01-atoms/Button/NeoButton-layout.css
+++ b/src/components/01-atoms/Button/NeoButton-layout.css
@@ -11,7 +11,7 @@
 .NeoButton--small {
 	--NeoButton-sizing-padding: var(--neo-sizing-inputPaddingSM);
 	--NeoButton-sizing-inline: var(--neo-sizing-inputBlockSM);
-	--NeoButton-sizing-fontSize: var(--neo-fontSize-textSm);
+	--NeoButton-sizing-fontSize: var(--neo-fontSize-xs);
 }
 
 .NeoButton--medium {
@@ -23,7 +23,7 @@
 .NeoButton--large {
 	--NeoButton-sizing-padding: var(--neo-sizing-inputPaddingLG);
 	--NeoButton-sizing-inline: var(--neo-sizing-inputBlockLG);
-	--NeoButton-sizing-fontSize: var(--neo-fontSize-textLg);
+	--NeoButton-sizing-fontSize: var(--neo-fontSize-base);
 }
 
 .NeoButton--rounded {
