--- a/src/components/01-atoms/Checkbox/NeoCheckbox-layout.css
+++ b/src/components/01-atoms/Checkbox/NeoCheckbox-layout.css
@@ -1,6 +1,6 @@
 .NeoCheckbox--small {
 	--NeoCheckbox-sizing-size: 16px;
-	--NeoCheckbox-sizing-labelFontSize: var(--neo-fontSize-textSm);
+	--NeoCheckbox-sizing-labelFontSize: var(--neo-fontSize-xs);
 }
 
 .NeoCheckbox--medium {
@@ -10,5 +10,5 @@
 
 .NeoCheckbox--large {
 	--NeoCheckbox-sizing-size: 24px;
-	--NeoCheckbox-sizing-labelFontSize: var(--neo-fontSize-textLg);
+	--NeoCheckbox-sizing-labelFontSize: var(--neo-fontSize-lg);
 }
