--- a/src/components/02-molecules/Select/NeoSelect-layout.css
+++ b/src/components/02-molecules/Select/NeoSelect-layout.css
@@ -11,7 +11,7 @@
 .NeoSelect--small {
 	--NeoSelect-sizing-padding: var(--neo-sizing-inputPaddingSM);
 	--NeoSelect-sizing-inline: var(--neo-sizing-inputBlockSM);
-	--NeoSelect-sizing-fontSize: var(--neo-fontSize-textSm);
+	--NeoSelect-sizing-fontSize: var(--neo-fontSize-xs);
 }
 
 .NeoSelect--medium {
@@ -23,7 +23,7 @@
 .NeoSelect--large {
 	--NeoSelect-sizing-padding: var(--neo-sizing-inputPaddingLG);
 	--NeoSelect-sizing-inline: var(--neo-sizing-inputBlockLG);
-	--NeoSelect-sizing-fontSize: var(--neo-fontSize-textLg);
+	--NeoSelect-sizing-fontSize: var(--neo-fontSize-base);
 }
 
 .NeoSelect--rounded {
